--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ad6d96">  <td>21/10/18 15:02:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_MedicalCenterTypes.f()[pri:0, instance:com.Tests.TC001_MedicalCenterTypes@58695725]">f</td> 
-  <td>main@538185145</td>   <td></td> </tr>
+<tr bgcolor="779568">  <td>21/10/19 17:13:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_MedicalCenter_MedicalCenterTypes.MedicalCentreTypes()[pri:-1, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@7c24b813]">MedicalCentreTypes</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="a1cb84">  <td>21/10/19 17:13:34</td>   <td>-55</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@7c24b813]">&gt;&gt;copy</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="a1cb84">  <td>21/10/19 17:13:34</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@7c24b813]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
