--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a1cb84">  <td>21/10/19 17:13:34</td>   <td>0</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@7c24b813]">&gt;&gt;copy</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="a1cb84">  <td>21/10/19 17:13:34</td>   <td>54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@7c24b813]">&gt;&gt;login</td> 
+<tr bgcolor="9dbc8c">  <td>21/11/04 17:41:15</td>   <td>0</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC003_GenericManagenent_Followups@73700b80]">&gt;&gt;copy</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@501705927</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>21/11/04 17:41:15</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC003_GenericManagenent_Followups@73700b80]">&gt;&gt;login</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="779568">  <td>21/10/19 17:13:34</td>   <td>55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_MedicalCenter_MedicalCenterTypes.MedicalCentreTypes()[pri:-1, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@7c24b813]">MedicalCentreTypes</td> 
-  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>21/11/04 17:41:15</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_GenericManagenent_Followups.MedicalCentreTypes()[pri:-1, instance:com.Tests.TC003_GenericManagenent_Followups@73700b80]">MedicalCentreTypes</td> 
+  <td>main@501705927</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>21/11/04 17:41:15</td>   <td>52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC003_GenericManagenent_Followups@73700b80]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
