--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6cf3ea">  <td>21/10/19 18:45:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_MedicalCenter_MedicalCenterTypes.MedicalCentreTypes()[pri:-1, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@209da20d]">MedicalCentreTypes</td> 
-  <td>main@1383178166</td>   <td></td> </tr>
-<tr bgcolor="f699d3">  <td>21/10/19 18:45:33</td>   <td>429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_MedicalCenter_MedicalCenterTypes2.MedicalCentreTypes()[pri:-1, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes2@659499f1]">MedicalCentreTypes</td> 
-  <td>main@1383178166</td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@209da20d]">&gt;&gt;broswerConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>415</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes2@659499f1]">&gt;&gt;broswerConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@209da20d]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes2@659499f1]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>-285</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes2@659499f1]">&gt;&gt;copy</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1383178166</td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@209da20d]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ad6d96">  <td>21/10/19 18:45:33</td>   <td>421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes2@659499f1]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>21/11/04 14:13:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_DoctorManagement_Specializations.Specializations()[pri:-1, instance:com.Tests.TC_002_DoctorManagement_Specializations@4d5b6aac]">Specializations</td> 
+  <td>main@2087785333</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>21/11/04 14:13:04</td>   <td>-4453</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@4d5b6aac]">&gt;&gt;broswerConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2087785333</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>21/11/04 14:13:22</td>   <td>13592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@4d5b6aac]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@2087785333</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>21/11/04 14:13:04</td>   <td>-4710</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@4d5b6aac]">&gt;&gt;copy</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2087785333</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>21/11/04 14:13:06</td>   <td>-1929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@4d5b6aac]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@2087785333</td>   <td></td> </tr>
 </table>
