--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,010</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test4</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,164</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Test5</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,743</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">67,917</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Test13</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">49,659</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.Tests.TC001_MedicalCenter_MedicalCenterTypes</td><td><a href="#m0">MedicalCentreTypes</a></td><td rowspan="1">1636981562205</td><td rowspan="1">13662</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test4 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.Tests.TC_001_DoctorManagement_DoctorTypes</td><td><a href="#m1">DoctorTypes</a></td><td rowspan="1">1636981581292</td><td rowspan="1">13119</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Test5 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.Tests.TC_002_DoctorManagement_Specializations</td><td><a href="#m2">Specializations</a></td><td rowspan="1">1636981599624</td><td rowspan="1">24600</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test13 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.Tests.TC007_GenericManagenent_Investigation_Types</td><td><a href="#m0">Types</a></td><td rowspan="1">1638192714560</td><td rowspan="1">45060</td></tr></tbody>
 </table>
-<h2>Test2</h2><h3 id="m0">com.Tests.TC001_MedicalCenter_MedicalCenterTypes#MedicalCentreTypes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test4</h2><h3 id="m1">com.Tests.TC_001_DoctorManagement_DoctorTypes#DoctorTypes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test5</h2><h3 id="m2">com.Tests.TC_002_DoctorManagement_Specializations#Specializations</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test13</h2><h3 id="m0">com.Tests.TC007_GenericManagenent_Investigation_Types#Types</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
