--- a/test-output/index.html
+++ b/test-output/index.html
@@ -56,7 +56,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Suite" class="navigator-link ">
-                    <span class="test-stats">3 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Tests.TC_001_DoctorManagement_DoctorTypes" class="method navigator-link" hash-for-method="DoctorTypes">DoctorTypes</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Tests.TC001_MedicalCenter_MedicalCenterTypes" class="method navigator-link" hash-for-method="MedicalCentreTypes">MedicalCentreTypes</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Tests.TC_002_DoctorManagement_Specializations" class="method navigator-link" hash-for-method="Specializations">Specializations</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.Tests.TC007_GenericManagenent_Investigation_Types" class="method navigator-link" hash-for-method="Types">Types</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -132,44 +122,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.Tests.TC001_MedicalCenter_MedicalCenterTypes</span>
+              <span class="class-name">com.Tests.TC007_GenericManagenent_Investigation_Types</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="MedicalCentreTypes">
-                  </a> <!-- MedicalCentreTypes -->
-                  <span class="method-name">MedicalCentreTypes</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.Tests.TC_001_DoctorManagement_DoctorTypes</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="DoctorTypes">
-                  </a> <!-- DoctorTypes -->
-                  <span class="method-name">DoctorTypes</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.Tests.TC_002_DoctorManagement_Specializations</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Specializations">
-                  </a> <!-- Specializations -->
-                  <span class="method-name">Specializations</span>
+                  <a name="Types">
+                  </a> <!-- Types -->
+                  <span class="method-name">Types</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,36 +147,16 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.Reports.Report&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;2&quot; name=&quot;Test2&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; name=&quot;Test13&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.Tests.TC001_MedicalCenter_MedicalCenterTypes&quot;&gt;
+      &lt;class name=&quot;com.Tests.TC007_GenericManagenent_Investigation_Types&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;MedicalCentreTypes&quot;/&gt;
+          &lt;include name=&quot;Types&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.Tests.TC001_MedicalCenter_MedicalCenterTypes --&gt;
+      &lt;/class&gt; &lt;!-- com.Tests.TC007_GenericManagenent_Investigation_Types --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test2 --&gt;
-  &lt;test thread-count=&quot;2&quot; name=&quot;Test4&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.Tests.TC_001_DoctorManagement_DoctorTypes&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;DoctorTypes&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.Tests.TC_001_DoctorManagement_DoctorTypes --&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test4 --&gt;
-  &lt;test thread-count=&quot;2&quot; name=&quot;Test5&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.Tests.TC_002_DoctorManagement_Specializations&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;Specializations&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.Tests.TC_002_DoctorManagement_Specializations --&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test5 --&gt;
+  &lt;/test&gt; &lt;!-- Test13 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -228,13 +168,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test2 (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Test4 (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Test5 (1 class)</span>
+                <span class="test-name">Test13 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -260,24 +194,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Specializations')
-data.setCell(0, 2, 'com.Tests.TC_002_DoctorManagement_Specializations')
-data.setCell(0, 3, 24600);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'MedicalCentreTypes')
-data.setCell(1, 2, 'com.Tests.TC001_MedicalCenter_MedicalCenterTypes')
-data.setCell(1, 3, 13662);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'DoctorTypes')
-data.setCell(2, 2, 'com.Tests.TC_001_DoctorManagement_DoctorTypes')
-data.setCell(2, 3, 13119);
+data.setCell(0, 1, 'Types')
+data.setCell(0, 2, 'com.Tests.TC007_GenericManagenent_Investigation_Types')
+data.setCell(0, 3, 45060);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 seconds</span>
+              <span class="suite-total-time">Total running time: 45 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -303,67 +229,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.Tests.TC_002_DoctorManagement_Specializations</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.Tests.TC007_GenericManagenent_Investigation_Types</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">copy</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.Tests.TC001_MedicalCenter_MedicalCenterTypes</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">broswerConfig(chrome)</span>
-                <span class="method-start">208 ms</span>
+                <span class="method-start">206 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">login</span>
-                <span class="method-start">2656 ms</span>
+                <span class="method-start">2321 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">MedicalCentreTypes</span>
-                <span class="method-start">6254 ms</span>
+                <span class="method-name">Types</span>
+                <span class="method-start">4589 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">close</span>
-                <span class="method-start">19935 ms</span>
-              </div> <!-- configuration-method after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.Tests.TC_001_DoctorManagement_DoctorTypes</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">broswerConfig(chrome)</span>
-                <span class="method-start">20364 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-method before">
-                <span class="method-name">login</span>
-                <span class="method-start">21625 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">DoctorTypes</span>
-                <span class="method-start">25341 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">close</span>
-                <span class="method-start">38463 ms</span>
-              </div> <!-- configuration-method after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.Tests.TC_002_DoctorManagement_Specializations</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">broswerConfig(chrome)</span>
-                <span class="method-start">38653 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-method before">
-                <span class="method-name">login</span>
-                <span class="method-start">39917 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">Specializations</span>
-                <span class="method-start">43673 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">close</span>
-                <span class="method-start">68275 ms</span>
+                <span class="method-start">49670 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
