--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,30 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:05:55</td>   <td>0</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@1a18644]">&gt;&gt;copy</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:05:56</td>   <td>206</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@4d5b6aac]">&gt;&gt;broswerConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:05:58</td>   <td>2651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@4d5b6aac]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>21/11/15 19:06:02</td>   <td>6249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_MedicalCenter_MedicalCenterTypes.MedicalCentreTypes()[pri:-1, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@4d5b6aac]">MedicalCentreTypes</td> 
-  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:06:15</td>   <td>19930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC001_MedicalCenter_MedicalCenterTypes@4d5b6aac]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:06:16</td>   <td>20359</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC_001_DoctorManagement_DoctorTypes@22ef9844]">&gt;&gt;broswerConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:06:17</td>   <td>21620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC_001_DoctorManagement_DoctorTypes@22ef9844]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="aea0a9">  <td>21/11/15 19:06:21</td>   <td>25336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_DoctorManagement_DoctorTypes.DoctorTypes()[pri:-1, instance:com.Tests.TC_001_DoctorManagement_DoctorTypes@22ef9844]">DoctorTypes</td> 
-  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:06:34</td>   <td>38461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC_001_DoctorManagement_DoctorTypes@22ef9844]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:06:34</td>   <td>38648</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@1a18644]">&gt;&gt;broswerConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:06:35</td>   <td>39913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@1a18644]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f278eb">  <td>21/11/15 19:06:39</td>   <td>43668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_DoctorManagement_Specializations.Specializations()[pri:-1, instance:com.Tests.TC_002_DoctorManagement_Specializations@1a18644]">Specializations</td> 
-  <td>main@1678046232</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>21/11/15 19:07:04</td>   <td>68270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC_002_DoctorManagement_Specializations@1a18644]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>21/11/29 19:31:49</td>   <td>0</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&gt;&gt;copy</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>21/11/29 19:31:50</td>   <td>203</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&gt;&gt;broswerConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>21/11/29 19:31:52</td>   <td>2315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
+<tr bgcolor="776cc1">  <td>21/11/29 19:31:54</td>   <td>4583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC007_GenericManagenent_Investigation_Types.Types()[pri:-1, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">Types</td> 
+  <td>main@382750013</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>21/11/29 19:32:39</td>   <td>49664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
 </table>
